examples/test/testpolicy12893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12893
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key20: value28
      key28: value22
      key24: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value37
      podSelector:
        matchLabels:
          key33: value8
          key11: value45
          key45: value22
